style: fix alignment and input widths

--- a/src/style.module.css
+++ b/src/style.module.css
@@ -88,12 +88,12 @@
   display: flex;
   align-items: center;
   width: 100%;
-  gap: 10px;
+  gap: 15px;
 }
 
 .applicationItemRowSpacer {
-  /* alignment of sub-checkboxes */
-  width: calc(var(--application-icon-dimension) + var(--application-title-mw) + 10px);
+  /* Aligns sub-checkboxes under the first select input */
+  width: calc(var(--application-icon-dimension) + var(--application-title-mw) + 15px);
 }
 
 .applicationTitle {
@@ -101,7 +101,7 @@
   min-width: var(--application-title-mw);
   font-weight: bold;
   color: var(--pico-muted-color);
-  font-size: 0.8rem;
+  font-size: 0.85rem;
 }
 
 .applicationIcon {
@@ -110,6 +110,7 @@
   background-size: contain;
   background-position: center center;
   background-repeat: no-repeat;
+  flex-shrink: 0;
 }
 
 .applicationImageDocs {
@@ -124,10 +125,17 @@
   display: flex;
   gap: 10px;
   flex: 1;
+  align-items: center;
+}
+
+/* Fixed widths for inputs */
+.applicationInputContainer select {
+  width: 150px;
+  margin: 0 !important;
 }
 
 .applicationZoomCustomInput {
-  max-width: 100px;
+  width: 80px;
   margin: 0 !important;
 }
 
